// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outputs custom package.json 1`] = `
Object {
  "author": "me",
  "browser": "./browser.lol",
  "dependencies": Object {
    "left-pad": "1.0.0",
  },
  "description": "A new project based on @magento/venia-concept",
  "license": "UNLICENSED",
  "name": "whee",
  "private": true,
  "scripts": Object {
    "build": "yarn run clean && yarn run validate-queries && webpack --no-progress --env.mode production",
    "build:dev": "yarn run clean && webpack --progress --env.mode development",
    "test": "yarn run do test this",
  },
  "version": "0.0.1",
}
`;

exports[`outputs npm package.json 1`] = `
Object {
  "author": "me",
  "browser": "./browser.lol",
  "dependencies": Object {
    "left-pad": "1.0.0",
  },
  "description": "A new project based on @magento/venia-concept",
  "license": "UNLICENSED",
  "name": "whee",
  "private": true,
  "scripts": Object {
    "build": "npm run clean && npm run validate-queries && webpack --no-progress --env.mode production",
    "build:dev": "npm run clean && webpack --progress --env.mode development",
    "test": "npm run do test this",
  },
  "version": "0.0.1",
}
`;
